--- a/data/display/Makefile.am
+++ b/data/display/Makefile.am
@@ -6,7 +6,7 @@ else
 DISPLAYTYPE = display
 endif
 
-dist_install_DATA = skin_display.xml progress_oled.png lcd_video_900uhd.png
+dist_install_DATA = skin_display.xml
 
 # Use box-specific XML if it exists, otherwise get the default
 # TEXTSKIN is either "default" or "7segment"
